--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
   <body>
     <header></header>
 
+    <main></main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <footer></footer>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
