--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pokédex Generation 1</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header></header>
 
-    <main></main>
+    <main>
+      <div>
+        <div id="pokelist"></div>
+      </div>
+    </main>
 
     <footer></footer>
-    
+
     <script src="./index.js" type="module"></script>
   </body>
 </html>
