--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokédex Generation 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header></header>
 
     <main>
-      <div>
+      <div class="container">
+        <h1>Pokemon</h1>
         <div id="pokelist"></div>
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+    </footer>
 
     <script src="./index.js" type="module"></script>
   </body>
