--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./index.css" /> -->
+    <link rel="stylesheet" href="../index.css" />
   </head>
   <body>
     <header></header>
@@ -21,7 +21,7 @@
 
     <footer>
     </footer>
-    
+
     <script src="../js/details.js" type="module"></script>
   </body>
 </html>
