--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
 
-        <div class="container">
+        <div class="main-container">
           <h1 class="poketitle"></h1>
 
           <div id="pokedetails">
@@ -87,6 +87,10 @@
           <div class="fake-text"></div>
           <div class="fake-text"></div>
         </div>
+
+        <div class="type"></div>
+
+        <audio controls src="" class="audio"></audio>
       </section>
     </main>
 
