--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <main>
       <div class="container">
         <h1>Pokemon</h1>
+        <label for="search" hidden></label>
+        <input type="search" name="search" id="search" placeholder="search for pokemon..." />
         <div id="pokelist"></div>
       </div>
     </main>
