--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a class="regions active" href="">Kanto</a>
+      <a class="regions" href="">Johto</a>
+      <a class="regions" href="">Hoenn</a>
+    </header>
 
     <main>
       <div class="container">
-        <h1>Pokemon</h1>
+        <h1>Pokemon Kanto region 1-151</h1>
         <label for="search" hidden></label>
         <input type="search" name="search" id="search" placeholder="search for pokemon..." />
         <div id="pokelist"></div>
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="foot-tainer">
+        <p>Tiny project from Tom Andre Iversen || Noroff student</p>
+      </div>
+    </footer>
 
     <script src="./js/index.js" type="module"></script>
   </body>
