--- a/info-kanto/index.html
+++ b/info-kanto/index.html
@@ -13,9 +13,10 @@
     <header>
       <a href="/" class="goHome">Go home</a>
 
-      <div>
+      <div class="go-to-index">
         <label for="select">Jump to:</label>
         <input type="number" name="select" id="select" min="1" max="151" />
+        <button id="goButton">GO</button>
       </div>
     </header>
 
@@ -27,11 +28,7 @@
           <div class="smaller-container" id="stopPrev">
             <p id="prevId"></p>
             <img class="indexPrev" src="" alt="" />
-            <div class="fake-text"></div>
-            <div class="fake-text"></div>
-            <div class="fake-text"></div>
-            <div class="fake-text"></div>
-            <div class="fake-text"></div>
+            <div class="fake-text">this is the previous pokemon, can you see who it is?</div>       
           </div>
         </div>
 
@@ -88,11 +85,7 @@
           <p id="nextId"></p>
 
           <img class="indexNext" src="" alt="" />
-          <div class="fake-text"></div>
-          <div class="fake-text"></div>
-          <div class="fake-text"></div>
-          <div class="fake-text"></div>
-          <div class="fake-text"></div>
+          <div class="fake-text">this pokemon is next, hope you like my test page</div>
         </div>
 
         <section id="type-tainer">
@@ -105,6 +98,8 @@
         <section id="abilities"></section>
 
         <section id="locations">
+          <article></article>
+
           <div>
             <!-- A -->
             <div class="a-1"></div>
@@ -147,7 +142,7 @@
 
           <div>
             <!-- C -->
-            <div class="c-1"></div>
+            <div class="c-1 Indigo-plateau"></div>
             <div class="c-2"></div>
             <div class="c-3"></div>
             <div class="c-4"></div>
@@ -168,7 +163,7 @@
             <!-- D -->
             <div class="d-1 victory-road"></div>
             <div class="d-2"></div>
-            <div class="d-3"></div>
+            <div class="d-3 pewter-city-area"></div>
             <div class="d-4"></div>
             <div class="d-5 kanto-route-3-area kanto-route-3-pokemon-center">3</div>
             <div class="d-6"></div>
@@ -219,7 +214,7 @@
             <div class="f-13"></div>
             <div class="f-14 kanto-route-8-area">8</div>
             <div class="f-15"></div>
-            <div class="f-16 pokemon-tower"></div>
+            <div class="f-16 pokemon-tower lavender-town-area"></div>
           </div>
           <div>
             <!-- G -->
@@ -320,7 +315,7 @@
             <!-- L -->
             <div class="l-1"></div>
             <div class="l-2"></div>
-            <div class="l-3"></div>
+            <div class="l-3 pallet-town"></div>
             <div class="l-4"></div>
             <div class="l-5"></div>
             <div class="l-6"></div>
