--- a/info-kanto/index.html
+++ b/info-kanto/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <a href="/" class="goHome">Go home</a>
+      <a href="../index.html" class="goHome">Go home</a>
 
       <div class="go-to-index">
         <label for="select">Jump to:</label>
