does this fix it?

--- a/info-johto/index.html
+++ b/info-johto/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="./johto.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="../index.html" class="goHome">Go home</a>
+    </header>
     <main>
+      <section id="pokemon-carousel"></section>
       <section id="locations"></section>
     </main>
     <footer></footer>
