--- a/info-kanto/index.html
+++ b/info-kanto/index.html
@@ -30,6 +30,13 @@
             <img class="indexPrev" src="" alt="" />
             <div class="fake-text">this is the previous pokemon, can you see who it is?</div>
           </div>
+
+          <div class="smaller-container" id="stopNext">
+            <p id="nextId"></p>
+
+            <img class="indexNext" src="" alt="" />
+            <div class="fake-text">this pokemon is next, hope you like my test page</div>
+          </div>
         </div>
 
         <div class="main-container">
@@ -43,49 +50,42 @@
 
             <div class="stat-container">
               <div class="stats">
-                <span>Health</span>
+                <span class="health"></span>
                 <div class="statbar"><div id="hp"></div></div>
                 <p class="hp"></p>
               </div>
 
               <div class="stats">
-                <span>Attack</span>
+                <span class="atk"></span>
                 <div class="statbar"><div id="attack"></div></div>
                 <p class="attack"></p>
               </div>
 
               <div class="stats">
-                <span>Defense</span>
+                <span class="def"></span>
                 <div class="statbar"><div id="defense"></div></div>
                 <p class="defense"></p>
               </div>
 
               <div class="stats">
-                <span>Sp.Atk</span>
+                <span class="spatk"></span>
                 <div class="statbar"><div id="special-attack"></div></div>
                 <p class="special-attack"></p>
               </div>
 
               <div class="stats">
-                <span>Sp.Def</span>
+                <span class="spdef"></span>
                 <div class="statbar"><div id="special-defense"></div></div>
                 <p class="special-defense"></p>
               </div>
 
               <div class="stats">
-                <span>Speed</span>
+                <span class="spd"></span>
                 <div class="statbar"><div id="speed"></div></div>
                 <p class="speed"></p>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="smaller-container" id="stopNext">
-          <p id="nextId"></p>
-
-          <img class="indexNext" src="" alt="" />
-          <div class="fake-text">this pokemon is next, hope you like my test page</div>
         </div>
 
         <section id="type-tainer">
@@ -159,6 +159,7 @@
             <div class="c-15"></div>
             <div class="c-16 rock-tunnel"></div>
           </div>
+
           <div>
             <!-- D -->
             <div class="d-1 victory-road"></div>
@@ -178,6 +179,7 @@
             <div class="d-15"></div>
             <div class="d-16 kanto-route-10-area power-plant-area">10</div>
           </div>
+
           <div>
             <!-- E -->
             <div class="e-1"></div>
@@ -197,6 +199,7 @@
             <div class="e-15"></div>
             <div class="e-16"></div>
           </div>
+
           <div>
             <!-- F -->
             <div class="f-1"></div>
@@ -216,6 +219,7 @@
             <div class="f-15"></div>
             <div class="f-16 pokemon-tower lavender-town-area"></div>
           </div>
+
           <div>
             <!-- G -->
             <div class="g-1 kanto-route-23-area">23</div>
@@ -235,6 +239,7 @@
             <div class="g-15"></div>
             <div class="g-16"></div>
           </div>
+
           <div>
             <!-- H -->
             <div class="h-1"></div>
@@ -254,6 +259,7 @@
             <div class="h-15"></div>
             <div class="h-16 kanto-route-12-area">12</div>
           </div>
+
           <div>
             <!-- I -->
             <div class="i-1 kanto-route-22-area">22</div>
@@ -273,6 +279,7 @@
             <div class="i-15"></div>
             <div class="i-16"></div>
           </div>
+
           <div>
             <!-- J -->
             <div class="j-1"></div>
@@ -292,6 +299,7 @@
             <div class="j-15"></div>
             <div class="j-16"></div>
           </div>
+
           <div>
             <!-- K -->
             <div class="k-1"></div>
@@ -311,6 +319,7 @@
             <div class="k-15"></div>
             <div class="k-16"></div>
           </div>
+
           <div>
             <!-- L -->
             <div class="l-1"></div>
@@ -330,6 +339,7 @@
             <div class="l-15 kanto-route-13-area">13</div>
             <div class="l-16"></div>
           </div>
+
           <div>
             <!-- M -->
             <div class="m-1"></div>
@@ -349,6 +359,7 @@
             <div class="m-15"></div>
             <div class="m-16"></div>
           </div>
+
           <div>
             <!-- N -->
             <div class="n-1"></div>
@@ -368,6 +379,7 @@
             <div class="n-15"></div>
             <div class="n-16"></div>
           </div>
+
           <div>
             <!-- O -->
             <div class="o-1"></div>
@@ -387,6 +399,7 @@
             <div class="o-15"></div>
             <div class="o-16"></div>
           </div>
+
           <div>
             <!-- P -->
             <div class="p-1"></div>
