fix on homepage

--- a/info-kanto/index.html
+++ b/info-kanto/index.html
@@ -49,40 +49,42 @@
             </div>
 
             <div class="stat-container">
-              <div class="stats">
-                <span class="health"></span>
-                <div class="statbar"><div id="hp"></div></div>
-                <p class="hp"></p>
-              </div>
+              <div>
+                <div class="stats">
+                  <span class="health"></span>
+                  <div class="statbar"><div id="hp"></div></div>
+                  <p class="hp"></p>
+                </div>
 
-              <div class="stats">
-                <span class="atk"></span>
-                <div class="statbar"><div id="attack"></div></div>
-                <p class="attack"></p>
-              </div>
+                <div class="stats">
+                  <span class="atk"></span>
+                  <div class="statbar"><div id="attack"></div></div>
+                  <p class="attack"></p>
+                </div>
 
-              <div class="stats">
-                <span class="def"></span>
-                <div class="statbar"><div id="defense"></div></div>
-                <p class="defense"></p>
-              </div>
+                <div class="stats">
+                  <span class="def"></span>
+                  <div class="statbar"><div id="defense"></div></div>
+                  <p class="defense"></p>
+                </div>
 
-              <div class="stats">
-                <span class="spatk"></span>
-                <div class="statbar"><div id="special-attack"></div></div>
-                <p class="special-attack"></p>
-              </div>
+                <div class="stats">
+                  <span class="spatk"></span>
+                  <div class="statbar"><div id="special-attack"></div></div>
+                  <p class="special-attack"></p>
+                </div>
 
-              <div class="stats">
-                <span class="spdef"></span>
-                <div class="statbar"><div id="special-defense"></div></div>
-                <p class="special-defense"></p>
-              </div>
+                <div class="stats">
+                  <span class="spdef"></span>
+                  <div class="statbar"><div id="special-defense"></div></div>
+                  <p class="special-defense"></p>
+                </div>
 
-              <div class="stats">
-                <span class="spd"></span>
-                <div class="statbar"><div id="speed"></div></div>
-                <p class="speed"></p>
+                <div class="stats">
+                  <span class="spd"></span>
+                  <div class="statbar"><div id="speed"></div></div>
+                  <p class="speed"></p>
+                </div>
               </div>
             </div>
           </div>
