--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header>
-      <a class="regions active" href="">Kanto</a>
-      <a class="regions" href="">Johto</a>
+      <a class="regions" href="./info-kanto/index.html">Kanto</a>
+      <a class="regions" href="./info-johto/index.html">Johto</a>
     </header>
 
     <main>
