added previous shit back

--- a/info-All/index.html
+++ b/info-All/index.html
@@ -15,7 +15,7 @@
 
       <div class="go-to-index">
         <label for="select">Jump to:</label>
-        <input type="number" name="select" id="select" min="1" max="151" />
+        <input type="number" name="select" id="select" min="1" max="251" />
         <button id="goButton">GO</button>
       </div>
     </header>
@@ -89,7 +89,11 @@
             </div>
           </div>
         </div>
-
+        <section id="abilities"></section>
+        <section id="type-tainer">
+          <p>Type:</p>
+          <div class="type"></div>
+        </section>
         <audio controls src="" class="audio"></audio>
       </section>
     </main>
