--- a/info-johto/index.html
+++ b/info-johto/index.html
@@ -49,7 +49,7 @@
       </div>
      
 
-      <!-- <section id="locations"></section> -->
+      <section id="locations"></section>
 
       <!-- <section id="map"></section>    -->
       </section>
